# commands-applet

./: Cargo.toml  README.md  justfile
data/: com.github.vinesnts.commands-applet.metainfo.xml
i18n/en/: commands_applet.ftl
i18n/sv/: commands_applet.ftl
resources/: app.desktop  app.metainfo.xml  commands.json
src/: app.rs  main.rs
